--- a/customerservice.yml
+++ b/customerservice.yml
@@ -1,3 +1,17 @@
+ spring:
+  application:
+    name: customerservice  
+  datasource:
+    url: jdbc:mysql://localhost:3306/bankingms
+    username: root
+    password: aceEM@11
+  jpa:
+    show-sql: true
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    hibernate:
+      ddl-auto: none
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 server:
   port: 8081
   
