--- a/customerservice.yml
+++ b/customerservice.yml
@@ -22,3 +22,5 @@ eureka:
   client:
     register-with-eureka: true
     fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8769/eureka/
