--- a/accountservice.yml
+++ b/accountservice.yml
@@ -1,6 +1,21 @@
 server:
   port: 8082
-  
+
+spring:
+  application:
+    name: ACCOUNTSERVICE
+  datasource:
+    url: jdbc:h2:mem:bankingms
+    username: sa
+    password: aceEM@11
+  jpa:
+    show-sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: none
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 eureka:
   instance:
     hostname: localhost
@@ -9,4 +24,4 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://${eureka.instance.hostname}:8769/eureka/
+      defaultZone: http://localhost:8761/eureka/
