--- a/customerservice.yml
+++ b/customerservice.yml
@@ -1,21 +1,21 @@
+server:
+  port: 8081
+
 spring:
   application:
-    name: customerservice  
+    name: CUSTOMERSERVICE
   datasource:
-    url: jdbc:mysql://localhost:3306/bankingms
-    username: root
+    url: jdbc:h2:mem:bankingms
+    username: sa
     password: aceEM@11
   jpa:
     show-sql: true
-    database-platform: org.hibernate.dialect.MySQL8Dialect
+    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: none
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-        
-server:
-  port: 8081
-  
+
 eureka:
   instance:
     hostname: localhost
