--- a/accountservice.yml
+++ b/accountservice.yml
@@ -1,24 +1,11 @@
 server:
   port: 8082
-
 spring:
   application:
     name: ACCOUNTSERVICE
   h2:
     console:
       enabled: true
-#  datasource:
-#    url: jdbc:h2:mem:bankingms
-#    username: sa
-#    password: aceEM@11
-#  jpa:
-#    show-sql: true
-#    database-platform: org.hibernate.dialect.H2Dialect
-#    hibernate:
-#      ddl-auto: none
-#      naming:
-#        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
 eureka:
   instance:
     hostname: localhost
@@ -27,4 +14,4 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: 'http://localhost:8761/eureka/'
